# Web_base_data_monitoring

./: README.md
webServer/: CMakeLists.txt  index.html
webServer/inc/: files.hpp  networking.hpp  testingsocket.hpp
webServer/inc/networking/: bindingsocket.hpp  listeningsocket.hpp  mainsocket.hpp  socket.hpp
webServer/inc/server/: server.hpp
webServer/src/: main.cpp  testingsocket.cpp
webServer/src/networking/: bindingsocket.cpp  listeningsocket.cpp  socket.cpp
webServer/src/server/: server.cpp
